fix: spacing in sidebar

--- a/src/components/welcome/MyAccounts/styles.module.css
+++ b/src/components/welcome/MyAccounts/styles.module.css
@@ -120,6 +120,7 @@
 
   .safeList {
     border-radius: 0;
+    margin-bottom: 0;
   }
 
   .title {
